--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 BMOD is an AmxModX (http://www.amxmodx.org/) module.
 BMOD is using Bullet (http://www.bulletphysics.org/) to provide an alternate physics engine for amxx developers.
+Visit thread at AlliedMods for more info: http://forums.alliedmods.net/showthread.php?t=178066
